New FindFBX changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,25 @@
 # General project setup
 CMAKE_MINIMUM_REQUIRED (VERSION 2.8.3)
-cmake_policy(SET CMP0042 OLD) # rpath not set
+
+IF (POLICY CMP0042)
+  CMAKE_POLICY(SET CMP0042 OLD) # rpath not set
+ENDIF()
+
 PROJECT (VtkFbxConverter)
 SET(VTKFBXCONVERTER_MAJOR_VERSION 0)
 SET(VTKFBXCONVERTER_MINOR_VERSION 1)
-SET(VTKFBXCONVERTER_PATCH_VERSION 0)
+SET(VTKFBXCONVERTER_PATCH_VERSION 1)
 SET(VTKFBXCONVERTER_VERSION
-	${VTKFBXCONVERTER_MAJOR_VERSION}.${VTKFBXCONVERTER_MINOR_VERSION}.${VTKFBXCONVERTER_PATCH_VERSION})
+   ${VTKFBXCONVERTER_MAJOR_VERSION}.${VTKFBXCONVERTER_MINOR_VERSION}.${VTKFBXCONVERTER_PATCH_VERSION})
 
 IF(NOT WIN32)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ignored-qualifiers -Wno-unused-parameter -Wno-missing-field-initializers")
+  SET(CMAKE_CXX_FLAGS
+    "${CMAKE_CXX_FLAGS} -Wno-ignored-qualifiers -Wno-unused-parameter -Wno-missing-field-initializers")
 ENDIF()
 
 # Find
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
 FIND_PACKAGE(FBX REQUIRED)
-ADD_DEFINITIONS(-DFBX_VERSION_MAJOR=${FBX_VERSION_MAJOR})
 IF(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   FIND_PACKAGE(ParaView QUIET)
 ENDIF()
@@ -56,10 +60,11 @@ FOREACH(p LIB BIN INCLUDE CMAKE)
 ENDFOREACH()
 
 INCLUDE_DIRECTORIES( . )
-INCLUDE_DIRECTORIES( SYSTEM ${FBX_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES( SYSTEM ${FBX_INCLUDE_DIR} )
 
 # Library
 ADD_LIBRARY(VtkFbxConverter
+  SHARED
 	Common.h
 	Common.cxx
 	VtkFbxHelper.h
@@ -87,8 +92,8 @@ ENDIF()
 # Executable
 ADD_EXECUTABLE(vtk_fbx_converter main.cxx)
 
-SET( LINK_LIBRARIES ${FBX_LIBRARIES} ${VTK_LIBRARIES} )
-
+SET( LINK_LIBRARIES ${FBX_LIBRARY_DEBUG} ${VTK_LIBRARIES} )
+TARGET_LINK_LIBRARIES (VtkFbxConverter ${LINK_LIBRARIES})
 TARGET_LINK_LIBRARIES (vtk_fbx_converter VtkFbxConverter ${LINK_LIBRARIES})
 
 IF(INSTALL_IN_PARAVIEW OR NOT CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
@@ -127,7 +132,8 @@ CONFIGURE_FILE(VtkFbxConverterConfigVersion.cmake.in
 
 # Cache variables when this is a subproject
 IF(NOT CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
-	SET(VTKFBXCONVERTER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} ${FBX_INCLUDE_DIRS} CACHE STRING "")
+	SET(VTKFBXCONVERTER_INCLUDE_DIRS
+          ${CMAKE_CURRENT_SOURCE_DIR} ${FBX_INCLUDE_DIR} CACHE STRING "")
 	SET(VTKFBXCONVERTER_LIBRARIES VtkFbxConverter ${LINK_LIBRARIES} CACHE STRING "")
 	SET(VTKFBXCONVERTER_FOUND TRUE CACHE BOOL "")
 ENDIF()
