--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
+FIND_PACKAGE(GTest REQUIRED)
 INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR} ${GTEST_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS}/gtest)
 
 ADD_EXECUTABLE (testrunner testrunner.cxx
