Fix compile issues with gcc

--- a/pv_plugin/CMakeLists.txt
+++ b/pv_plugin/CMakeLists.txt
@@ -22,7 +22,7 @@ ADD_PARAVIEW_PLUGIN(FbxExporter "${VERSION_MAJOR}.${VERSION_MINOR}"
 	GUI_INTERFACES ${IFACES}
 	SERVER_MANAGER_XML ${SERVER_MANAGER_XML_FILE}
 	SERVER_MANAGER_SOURCES vtkFbxExporter.cxx
-	SERVER_SOURCES ${CMAKE_SOURCE_DIR}/vtkFbxConverter.cxx
+	SERVER_SOURCES ${CMAKE_SOURCE_DIR}/VtkFbxConverter.cxx
 	SOURCES pqFbxStarter.cxx ${MOC_SRCS} ${IFACE_SRCS}
 	)
 
